schedule-creator-be/rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672  # In order to reach this port from outside we need an ingress
      targetPort: 15672  # GUI port
    - name: amqp
      protocol: TCP
      port: 5672  # message transmission port
      targetPort: 5672
